docs/examples/service-mesh/linkerd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-demo
  labels:
    linkerd.io/inject: enabled
